# movie-review-sentiment

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  run_nb.py  setup.md
.claude/agents/: notebook-reviewer.md
.github/: pull_request_template.md
artifacts/: README.md
data/: README.md
data/golden/: golden_set.csv  pilot-tags-golden.csv
docs/: README.md  ai-use-log.md  contributions.md  decisions.md  judge-dev-log.md  tagging-protocol.md  workload-plan.md
notebooks/: 00_core.ipynb  01_eda.ipynb  05_divergence_judge.ipynb  README.md
outputs/: README.md
outputs/tables/: 01-eda_html_artifacts.csv  01-eda_length_summary.csv  01-eda_split_balance.csv  01-eda_top_ngrams_by_class.csv  05-judge_golden_eval.csv
report/: README.md
scripts/: execute_nb.py  patch_nb.py
src/: README.md  shared.py
